Added initial content to index.html and ported it over to the other 2 files to further edit.

--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
-<html>
+<!-- Starting Template taken from Bootstrap website-->
+<html lang="en-us">
 
 <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Mark Hartman</title>
-<meta lang="en-us">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <title>Mark Hartman</title>
 </head>
+
+<body>
+<!-- Navbar taken from the bootstrap documentation-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="index.html">Mark Hartman</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+        </li>
+
+      </ul>
+
+    </div>
+</nav>
+
+<!-- Start of Page Content-->
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <div class="block">
+        <h1 class="block-header">Contact</h1>
+        <hr>
+        <div class="row">
+            <img src="https://via.placeholder.com/150" class="img-responsive" alt="I have no good photos of myself.">
+            <p>Hello, my name is Mark. This is my page. A little bit about me I suppose. 
+            I did Stand Up comedy in the Minneapolis area for about 6 months, and was once told by a better known comedian that I reminded him of Louis C.K. 
+            One week later Louis C.K. had announced that he had been jerking off in front of women, and I could only think "How did he know that too?"
+          </p>
+          <br>
+        <p class="pull-left">Otherwise, I also do 3D modeling utilizing Blender, and occassionaly do work with Habitat for Humanity. 
+         I don't get a sense of joy out of building the houses for lesser off families. 
+         I just get joy out of building a house, regardless of who lives in it. 
+         Ted Bundy could live in it, and I wouldn't care, nor remember that I helped build it.
+        </p> 
+        </div>   
+      </div>
+    </div>
+  </div>
+</div>
+
+<footer class="page-footer fixed-bottom">
+  <div class="container">
+    <div class="row">
+    <div class="col-md-8 offset-md-2">
+    <p class="text-center">©2019 Mark Hartman</p>
+  </div>
+  </div>
+  </div>
+</footer>
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  
+</body>
+
+</html>
