Added in the columns, rows, and blank images for portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,27 +44,46 @@
   <div class="row">
     <div class="col-md-8 offset-md-2">
       <div class="block">
-        <h1 class="block-header">About Me</h1>
-        <hr>
+        <h1 class="block-header">Portfolio</h1>
+        <hr />
         <div class="row">
-            <img src="https://via.placeholder.com/150" class="img-responsive" alt="I have no good photos of myself.">
-            <p>Hello, my name is Mark. This is my page. A little bit about me I suppose. 
-            I did Stand Up comedy in the Minneapolis area for about 6 months, and was once told by a better known comedian that I reminded him of Louis C.K. 
-            One week later Louis C.K. had announced that he had been jerking off in front of women, and I could only think "How did he know that too?"
-          </p>
-          <br>
-        <p class="pull-left">Otherwise, I also do 3D modeling utilizing Blender, and occassionaly do work with Habitat for Humanity. 
-         I don't get a sense of joy out of building the houses for lesser off families. 
-         I just get joy out of building a house, regardless of who lives in it. 
-         Ted Bundy could live in it, and I wouldn't care, nor remember that I helped build it.
-        </p> 
-        </div>   
+          <div class="col-sm-6 col-md-12 col-lg-6">
+            <h3>Project 1</h3>
+            <img class="img-fluid port-image" src="https://via.placeholder.com/150" alt="It's not that I'm too good for pictues, it's that a gray box has as much meaning as a random stock image.">
+          </div>
+          <div class="col-sm-6 col-md-12 col-lg-6">
+            <h3>Project 2</h3>
+            <img class="img-fluid port-image" src="https://via.placeholder.com/150" alt="">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 col-md-12 col-lg-6">
+            <h3>Project 3</h3>
+            <img class="img-fluid port-image" src="https://via.placeholder.com/150" alt="Who reads alt text, aside from the blind, or xkcd readers?">
+          </div>
+          <div class="col-sm-6 col-md-12 col-lg-6">
+            <h3>Project 4</h3>
+            <img class="img-fluid port-image" src="https://via.placeholder.com/150" alt="I fought a bear once. It was at a gay bar however.">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 col-md-12 col-lg-6">
+            <h3>Project 5</h3>
+            <img class="img-fluid port-image" src="https://via.placeholder.com/150" alt="Yeet">
+          </div>
+          <div class="col-sm-6 col-md-12 col-lg-6">
+            <h3>Project 6</h3>
+            <img class="img-fluid port-image" src="https://via.placeholder.com/150" alt=>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-<footer class="page-footer fixed-bottom">
+
+<!-- Footer Thing-->
+<footer class="page-footer fixed-bottom bg-light">
   <div class="container">
     <div class="row">
     <div class="col-md-8 offset-md-2">
