Added in contact content, and updated footer to better style.

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
   </div>
 </div>
 
-<footer class="page-footer fixed-bottom">
+<footer class="page-footer fixed-bottom bg-dark">
   <div class="container">
     <div class="row">
     <div class="col-md-8 offset-md-2">
-    <p class="text-center">©2019 Mark Hartman</p>
+    <p class="text-center bg-dark text-light">©2019 Mark Hartman</p>
   </div>
   </div>
   </div>
