--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
     <div class="col-md-8 offset-md-2">
       <div class="block">
         <h1 class="block-header">Portfolio</h1>
-        <hr />
+        <hr>
         <div class="row">
           <div class="col-sm-6 col-md-12 col-lg-6">
             <h3>Project 1</h3>
@@ -83,11 +83,11 @@
 
 
 <!-- Footer Thing-->
-<footer class="page-footer fixed-bottom bg-light">
+<footer class="page-footer fixed-bottom bg-dark">
   <div class="container">
     <div class="row">
     <div class="col-md-8 offset-md-2">
-    <p class="text-center">©2019 Mark Hartman</p>
+    <p class="text-center bg-dark text-light">©2019 Mark Hartman</p>
   </div>
   </div>
   </div>
