--- a/contact.html
+++ b/contact.html
@@ -41,34 +41,40 @@
 <!-- Start of Page Content-->
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-8 offset-md-2">
-      <div class="block">
-        <h1 class="block-header">Contact</h1>
-        <hr>
-        <div class="row">
-            <img src="https://via.placeholder.com/150" class="img-responsive" alt="I have no good photos of myself.">
-            <p>Hello, my name is Mark. This is my page. A little bit about me I suppose. 
-            I did Stand Up comedy in the Minneapolis area for about 6 months, and was once told by a better known comedian that I reminded him of Louis C.K. 
-            One week later Louis C.K. had announced that he had been jerking off in front of women, and I could only think "How did he know that too?"
-          </p>
-          <br>
-        <p class="pull-left">Otherwise, I also do 3D modeling utilizing Blender, and occassionaly do work with Habitat for Humanity. 
-         I don't get a sense of joy out of building the houses for lesser off families. 
-         I just get joy out of building a house, regardless of who lives in it. 
-         Ted Bundy could live in it, and I wouldn't care, nor remember that I helped build it.
-        </p> 
-        </div>   
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <form class="block form-horizontal">
+          <h1 class="block-header">Contact</h1>
+          <hr>
+          <div class="form-group">
+            <label for="name" class="col-sm-2 control-label">Name</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="name" placeholder="Name">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="email" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+              <input type="password" class="form-control" id="email" placeholder="Email">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label" for="msg">Message</label>
+            <div class="col-sm-10">
+              <textarea id="msg" class="form-control" rows="3" placeholder="Message"></textarea>
+            </div>
+          </div>
+          <button class="submit-btn">Submit</button>
+        </form>
       </div>
     </div>
   </div>
-</div>
 
-<footer class="page-footer fixed-bottom">
+<footer class="page-footer fixed-bottom bg-dark">
   <div class="container">
     <div class="row">
     <div class="col-md-8 offset-md-2">
-    <p class="text-center">©2019 Mark Hartman</p>
+    <p class="text-center text-light bg-dark">©2019 Mark Hartman</p>
   </div>
   </div>
   </div>
